# acme_robotics_perception_module

./: .travis.yml  CMakeLists.txt  readme.md
app/: CMakeLists.txt  camera.cpp  control_module.cpp  main.cpp  perception_module.cpp  ultra_sensor.cpp
documentation/html/: _8ycm__extra__conf_8py.html  _8ycm__extra__conf_8py_source.html  __8ycm____extra____conf__8py_8js.html  __8ycm____extra____conf__8py_8js_source.html  all__0_8js.html  all__0_8js_source.html  all__1_8js.html  all__1_8js_source.html  all__2_8js.html  all__2_8js_source.html  all__3_8js.html  all__3_8js_source.html  all__4_8js.html  all__4_8js_source.html  all__5_8js.html  all__5_8js_source.html  all__6_8js.html  all__6_8js_source.html  all__7_8js.html  all__7_8js.js  all__7_8js_source.html  all__8_8js.html  all__8_8js_source.html  all__9_8js.html  all__9_8js_source.html  all__a_8js.html  all__a_8js_source.html  all__b_8js.html  all__b_8js.js  all__b_8js_source.html  all__c_8js.html  all__c_8js.js  all__c_8js_source.html  all__d_8js.html  all__d_8js_source.html  all__e_8js.html  all__e_8js_source.html  all__f_8js.html  all__f_8js_source.html  annotated.html  (+375 more)
documentation/latex/: _8ycm__extra__conf_8py.tex  __8ycm____extra____conf__8py_8js.tex  all__0_8js.tex  all__1_8js.tex  all__2_8js.tex  all__3_8js.tex  all__4_8js.tex  (+155 more)
include/: camera.hpp  control_module.hpp  perception_module.hpp  sensor.hpp  ultrasonic_sensor.hpp
results/: cppcheck_output.txt  cpplint_output.txt
test/: CMakeLists.txt  main.cpp  test_camera.cpp  test_control_module.cpp  test_perception_module.cpp  test_ultrasonic_sensor.cpp
(+72 files in other folders)
